# mcp

./: .gitignore  DCR_IMPLEMENTATION.md  Makefile  README.md  SECURITY_IMPLEMENTATION.md  databricks_mcp_auto_auth.ps1  databricks_mcp_client.js  databricks_mcp_client.ps1  databricks_mcp_client_entra.ps1  pyproject.toml
databricks-mcp-server/: app.yaml  pyproject.toml  requirements.txt
databricks-mcp-server/src/custom_server/: app.py
databricks-mcp-server/src/custom_server/static/: index.html
hooks/: apps_build.py
servers/developer_tools/: README.md
servers/unity_catalog/: app.yaml  pyproject.toml  requirements.txt
servers/unity_catalog/src/unitycatalog_mcp/: __init__.py  __main__.py  cli.py  server.py  version.py
servers/unity_catalog/src/unitycatalog_mcp/tools/: __init__.py  base_tool.py  functions.py  genie.py  vector_search.py
servers/unity_catalog/tests/: conftest.py  test_cli.py  test_functions.py  test_genie.py  test_vector_search.py
src/databricks/labs/mcp/: __main__.py  app.py  server.py
src/databricks/labs/mcp/servers/unity_catalog/: app.py
src/databricks/labs/mcp/servers/unity_catalog/tools/: __init__.py
