[project]
name = "databricks-labs-mcp"
dynamic = ["version", "readme"]
description = "Databricks MCP servers"
authors = [{ name = "renardeinside", email = "polarpersonal@gmail.com" }]
requires-python = ">=3.10"
dependencies = [
    "databricks-sdk>=0.50.0",
    "fastapi>=0.115.12",
    "mcp[cli]>=1.6.0",
    "pydantic[email]>=2.11.3",
    "uvicorn>=0.34.2",
]
license-files = ["LICENSE", "NOTICE"]


[build-system]
requires = ["hatchling", "hatch-fancy-pypi-readme", "hatch-vcs"]
build-backend = "hatchling.build"

# for compatability with databricks.labs.* layout
[tool.hatch.build]
sources = ["src"]
include = ["src"]


[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/databricks/labs/mcp/_version.py"


[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "README.md"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.substitutions]]
# replace relative links with absolute links
pattern = '\[(.+?)\]\(((?!https?://)\S+?)\)'
replacement = '[\1](https://github.com/databrickslabs/mcp/tree/main/\g<2>)'

[[tool.hatch.metadata.hooks.fancy-pypi-readme.substitutions]]
# replace relative image links with absolute links
pattern = '<img (.*?)src="((?!https?://)\S+?)"(.*?)>'
replacement = '<img \1src="https://raw.githubusercontent.com/databrickslabs/mcp/refs/heads/main/\g<2>"\g<3>>'
